--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,6 +32,7 @@ subjects:
 - !lcc 'PN'
 - !lcsh 'Theater -- History'
 - !lcsh 'Drama -- History and criticism'
+- GITenberg
 tableOfContents: The show business -- The limitations of the stage -- A moral from
   a toy theater -- Why five acts? -- Dramatic collaboration -- The dramatization of
   novels and the novelization of plays -- Women dramatists -- The evolution of scene-painting
